--- a/haxball_site/templates/core/include/sidebar_for_last_activity.html
+++ b/haxball_site/templates/core/include/sidebar_for_last_activity.html
@@ -11,7 +11,7 @@
 
     <div class="btn-group-vertical">
         {% for comment in last_comments %}
-            <a type="button" href="{{ comment.content_object.get_absolute_url }}#r{{ comment.id }}" class="btn btn-secondary btn-block text-right"
+            <a type="button" href="{{ comment.get_absolute_url }}" class="btn btn-secondary btn-block text-right"
                data-toggle="tooltip" data-placement="right" title="от {{ comment.author }}">
                 <div class="d-flex justify-content-between">{{ comment.content_object|truncatechars:22 }} <img
                         src="{% static "img/ico/reply.png" %}" height="30" width="30"></div>
