--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -32,7 +32,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'tournament:league' 'premier_league' %}">Единая лига</a>
-                    <a class="dropdown-item" href="#">Кубок России</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 'cup' %}">Кубок России</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/86/reglament">Регламент</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/110/bron_hosta">Бронь хоста</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/109/perenosi">Переносы</a>
